Updated App.js to have 4 Cards

--- a/swi-app/src/Components/Card/styles.css
+++ b/swi-app/src/Components/Card/styles.css
@@ -1,5 +1,8 @@
+.big {
+    width: 80%;
+}
 .Card {
-    width: 25%;
+    /* width: 40%; */
 };
 .title {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
