--- a/swi-app/src/App.css
+++ b/swi-app/src/App.css
@@ -1,5 +1,26 @@
+.CardModal {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+.image {
+  width: 25%;
+  align-content: left;
+}
+.text {
+  font-family: 'Arial Narrow';
+  font-size: 30px;
+  font-weight: bold;
+  vertical-align: -30px;
+  padding-left: 2%;
+}
+.horizontal {
+  display: block;
+  width: 70%;
+  margin-top: 0;
+  size: 50px;
+}
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
