--- a/swi-app/src/Components/Card/styles.css
+++ b/swi-app/src/Components/Card/styles.css
@@ -1,8 +1,6 @@
 .big {
-    width: 80%;
-}
-.Card {
-    /* width: 40%; */
+    width: 85%;
+    margin-left: 6%;
 };
 .title {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
