--- a/swi-app/src/App.css
+++ b/swi-app/src/App.css
@@ -21,27 +21,34 @@
 }
 .App {
   /* text-align: center; */
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+  vertical-align: middle;
+  margin-top: 10px;
+  padding-left: 30%;
+  align-content: center;
+=
+}
+.list {
+  text-align: center;
+  display: inline-block;
+  padding-left:60px;
+  padding-right: 60px;
+  justify-content: space-between;
+  
+}
+.link {
   color: white;
+  font-size: 15px;
+}
+
+ul{
+  overflow: hidden;
 }
 
 .App-link {
-  color: #61dafb;
+  color: white;
 }
 
 @keyframes App-logo-spin {
@@ -52,3 +59,4 @@
     transform: rotate(360deg);
   }
 }
+
