--- a/swi-app/src/Components/Post/styles.css
+++ b/swi-app/src/Components/Post/styles.css
@@ -1,3 +1,28 @@
+.media {
+    padding-left: 2%;
+    /* background-color: gray; */
+    /* width: 50%; */
+    padding-bottom: 1%;
+}
+.label {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 24px;
+    /* font-weight: bold; */
+}
+.post {
+    align-content: center;
+    align-items: center;
+    display: inline-block;
+   
+}
+.horizontal {
+    padding-bottom: 1%;
+    width: 80%;
+}
 .profile-image {
+    padding-left: .5%;
     width: 5%;
+}
+.media-body {
+    padding-left:3%;
 }
